// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Emphasize should show as expected 1`] = `
<strong
  class="bg-linear-180 from-transparent from-70% to-green-500 dark:to-green-600 to-70% undefined"
>
  Koishi Komeiji
</strong>
`;

exports[`Emphasize should show as expected 2 1`] = `
<strong
  class="bg-linear-180 from-transparent from-70% to-green-500 dark:to-green-600 to-70% to-pink-300"
>
  Hoshino Takanashi
</strong>
`;
